# cirugia

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.gtk  README.md  about.cpp  about.h  about.ui  hasher.cpp  hasher.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nesrom.cpp  nesrom.h
cli/: cirugia.c  cirugia.h
core/: hash.c  hash.h  header.c  header.h  ips.c  ips.h  rom.c  rom.h
gtk/: cirugia.c  cirugia.h  cirugia.ui
